# VoxCortex

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SUPPORT.md  THIRD_PARTY_NOTICES.md
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: USER_GUIDE.md
firmware/: platformio.ini  version.json
firmware/include/: AppTypes.h  AudioCapture.h  FirmwareInfo.h  ProtocolClient.h  ProvisioningPortal.h  SettingsStore.h  SpectrumAnalyzer.h  UserInterface.h
firmware/scripts/: build_metadata.py  version.py
firmware/src/: AudioCapture.cpp  ProtocolClient.cpp  ProvisioningPortal.cpp  SettingsStore.cpp  SpectrumAnalyzer.cpp  UserInterface.cpp  main.cpp
pc_server/: config.example.yaml  pyproject.toml  tray_entry.py
pc_server/src/m5_dictation/: __init__.py  app.py  audio.py  cli.py  config.py  firmware_updater.py  firmware_window.py  history.py  history_store.py  runtime.py  settings_window.py  transcriber.py  tray.py
pc_server/src/voxcortex/: __init__.py  app.py  cli.py  config.py  firmware_updater.py  firmware_window.py  history.py  icons.py  inserter.py  links.py  protocol.py  runtime.py  settings_window.py  tray.py  windows_input.py
scripts/: build_firmware.ps1  build_server_exe.ps1  flash_firmware.ps1  install_autostart.ps1  install_server_exe_autostart.ps1  package_release.ps1  setup_windows.ps1  sign_windows.ps1  start_server.bat  start_server.ps1  start_tray.ps1  update_release_hashes.ps1
tests/: test_config.py  test_firmware_updater.py  test_history_store.py  test_imports.py  test_links.py  test_release_archive.py
tools/: collect_python_licenses.py  device_simulator.py  package_firmware.py  verify_release_archive.py
